# grocery-shelf-analysis

./: README.md  pyproject.toml
app/: auth.py  cli_fullness.py  cv_core.py  llm_gpt.py  main.py  schemas.py
